# georgia-elections-report

./: .gitignore  .impeccable.md  README.md  main.py  pyproject.toml
.github/security/: detect_secrets_org_plugin.py  gitleaks.toml  kingfisher-rules.yml  rusty-hog-allowlist.json  rusty-hog-org-rule.json  trivy-secret.yaml  trufflehog.yaml
.github/workflows/: deploy.yml  security.yml
docs/decisions/: 0001-astro-ssg-with-react-islands.md
docs/reports/: 2026-07-17-pr1-review.md
docs/superpowers/plans/: 2026-07-17-astro-pivot.md  2026-07-17-report-data-pipeline-react-spa.md
docs/superpowers/specs/: 2026-07-17-report-data-pipeline-react-spa-design.md
generator/: README.md  build.py  pyproject.toml
generator/boe/: README.md  __init__.py  cli.py  db.py  graph.py  models.py  repo.py  search.py
generator/builders/: county_boards.py  demographics.py  turnout.py
generator/content/county-boards/: fulton.md
generator/tests/: test_boe.py  test_county_boards.py  test_smoke.py  test_stub_builders.py
generator/tests/fixtures/: fulton.md
sensitive-data/: README.md
web/: README.md  astro.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
web/public/geo/: ga-counties-paths.json
web/scripts/: build-map-paths.mjs
web/src/: App.tsx
web/src/components/: CountyMap.tsx
web/src/layouts/: Layout.astro
web/src/lib/: api.ts  url.ts
web/src/pages/: demographics.astro  index.astro  map.astro  turnout.astro
web/src/routes/: CountiesList.tsx  CountyDetail.tsx
web/src/styles/: global.css
web/src/types/: county.ts
