[project]
name = "georgia-elections-report-generator"
version = "0.1.0"
description = "Compiles report content/data into static JSON for the web app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.10.2",
    "networkx>=3.6.1",
    "nh3>=0.3.6",
    "pydantic>=2.13.4",
    "python-frontmatter>=1.3.0",
    "typer>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[project.scripts]
boe = "boe.cli:app"
build = "build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["builders", "boe"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.workspace]
members = ["."]
